--- a/views/about.hbs
+++ b/views/about.hbs
@@ -5,6 +5,7 @@
         <title>About</title>
     </head>
     <body>
+        <!-- render partials with this syntax -->
         {{> header }}
         <p>Here's some helpful text</p>
     </body>
